--- a/xilinx/serialula.ucf
+++ b/xilinx/serialula.ucf
@@ -1,47 +1,47 @@
 NET "Clk" TNM_NET = clk_period_grp_clk;
-TIMESPEC TS_clk_period_clk = PERIOD "clk_period_grp_clk" 812.5ns HIGH;
+#TIMESPEC TS_clk_period_clk = PERIOD "clk_period_grp_clk" 812.5ns HIGH;
 
 NET "E" TNM_NET = clk_period_grp_e;
-TIMESPEC TS_clk_period_e = PERIOD "clk_period_grp_e" 500ns HIGH;
+#TIMESPEC TS_clk_period_e = PERIOD "clk_period_grp_e" 500ns HIGH;
 
 NET "E" CLOCK_DEDICATED_ROUTE = FALSE;
 
-NET "Data<0>"   LOC="P16" | IOSTANDARD = LVCMOS33                           ; # DIP pin 1
-NET "Data<1>"   LOC="P95" | IOSTANDARD = LVCMOS33                           ; # DIP pin 2
-NET "Data<2>"   LOC="P18" | IOSTANDARD = LVCMOS33                           ; # DIP pin 3
-NET "Data<3>"   LOC="P17" | IOSTANDARD = LVCMOS33                           ; # DIP pin 4
-NET "Data<4>"   LOC="P94" | IOSTANDARD = LVCMOS33                           ; # DIP pin 5
-NET "Data<5>"   LOC="P22" | IOSTANDARD = LVCMOS33                           ; # DIP pin 6
-NET "Data<6>"   LOC="P23" | IOSTANDARD = LVCMOS33                           ; # DIP pin 7
-NET "Data<7>"   LOC="P33" | IOSTANDARD = LVCMOS33                           ; # DIP pin 8
-NET "nCS"       LOC="P32" | IOSTANDARD = LVCMOS33                           ; # DIP pin 9
-NET "E"         LOC="P34" | IOSTANDARD = LVCMOS33                           ; # DIP pin 10
-NET "CasMotor"  LOC="P40" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8 ; # DIP pin 11
-NET "CasIn"     LOC="P41" | IOSTANDARD = LVCMOS33                           ; # DIP pin 12
-NET "DCD"       LOC="P36" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8 ; # DIP pin 13
-# NET "GND"     LOC="P35" | IOSTANDARD = LVCMOS33                           ; # DIP pin 14
+NET "Data<0>"   LOC="P39"                ; # DIP pin 1
+NET "Data<1>"   LOC="P40"                ; # DIP pin 2
+NET "Data<2>"   LOC="P41"                ; # DIP pin 3
+NET "Data<3>"   LOC="P42"                ; # DIP pin 4
+NET "Data<4>"   LOC="P1"                 ; # DIP pin 5
+NET "Data<5>"   LOC="P2"                 ; # DIP pin 6
+NET "Data<6>"   LOC="P3"                 ; # DIP pin 7
+NET "Data<7>"   LOC="P7"                 ; # DIP pin 8
+NET "nCS"       LOC="P8"                 ; # DIP pin 9
+NET "E"         LOC="P43"                ; # DIP pin 10
+NET "CasMotor"  LOC="P12"  | SLEW = SLOW ; # DIP pin 11
+NET "CasIn"     LOC="P13"                ; # DIP pin 12
+NET "DCD"       LOC="P14"  | SLEW = SLOW ; # DIP pin 13
+#NET "GND"      LOC="P35"                ; # DIP pin 14
 
-#NET "CR"       LOC="P83" | IOSTANDARD = LVCMOS33                           ; # DIP pin 27
-NET "Din"       LOC="P78" | IOSTANDARD = LVCMOS33                           ; # DIP pin 28
-NET "RxD"       LOC="P79" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8 ; # DIP pin 29
-NET "RxC"       LOC="P85" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8 ; # DIP pin 30
-NET "CTSO"      LOC="P92" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8 ; # DIP pin 31
-NET "CTSI"      LOC="P98" | IOSTANDARD = LVCMOS33                           ; # DIP pin 32
-NET "Dout"      LOC="P3"  | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8 ; # DIP pin 33
-NET "TxD"       LOC="P2"  | IOSTANDARD = LVCMOS33                           ; # DIP pin 34
-NET "RTSO"      LOC="P4"  | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8 ; # DIP pin 35
-NET "RTSI"      LOC="P5"  | IOSTANDARD = LVCMOS33                           ; # DIP pin 36
-NET "Clk"       LOC="P90" | IOSTANDARD = LVCMOS33                           ; # DIP pin 37
-NET "TxC"       LOC="P9"  | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8 ; # DIP pin 38
-#NET "CasOut"   LOC="P10" | IOSTANDARD = LVCMOS33                           ; # DIP pin 39
-#NET "VCC"      LOC="P11" | IOSTANDARD = LVCMOS33                           ; # DIP pin 40
+#NET "CR"       LOC="P83"                ; # DIP pin 15
+NET "Din"       LOC="P19"                ; # DIP pin 16
+NET "RxD"       LOC="P20"  | SLEW = SLOW ; # DIP pin 17
+NET "RxC"       LOC="P21"  | SLEW = SLOW ; # DIP pin 18
+NET "CTSO"      LOC="P22"  | SLEW = SLOW ; # DIP pin 19
+NET "CTSI"      LOC="P23"                ; # DIP pin 20
+NET "Dout"      LOC="P27"  | SLEW = SLOW ; # DIP pin 21
+NET "TxD"       LOC="P28"                ; # DIP pin 22
+NET "RTSO"      LOC="P32"  | SLEW = SLOW ; # DIP pin 23
+NET "RTSI"      LOC="P33"                ; # DIP pin 24
+NET "Clk"       LOC="P44"                ; # DIP pin 25
+NET "TxC"       LOC="P36"  | SLEW = SLOW ; # DIP pin 26
+#NET "CasOut"   LOC="P10"                ; # DIP pin 27
+#NET "VCC"      LOC="P11"                ; # DIP pin 28
 
 
-# I/O's for test connector
-NET "CasOut<0>" LOC="P48" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8 ; # connector pin E2
-NET "CasOut<1>" LOC="P49" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8 ; # connector pin E3
-#NET ""         LOC="P27" | IOSTANDARD = LVCMOS33                           ; # connector pin E4
-#NET ""         LOC="P44" | IOSTANDARD = LVCMOS33                           ; # connector pin E5
-#NET ""         LOC="P50" | IOSTANDARD = LVCMOS33                           ; # connector pin E6
-#NET ""         LOC="P42" | IOSTANDARD = LVCMOS33                           ; # connector pin E7
-#NET ""         LOC="P99" | IOSTANDARD = LVCMOS33                           ; # connector pin E8
+#I/O's for test connector
+NET "CasOut<0>" LOC="P38"  | SLEW = SLOW ; # connector pin E2
+NET "CasOut<1>" LOC="P37"  | SLEW = SLOW ; # connector pin E3
+#NET ""         LOC="P27"                ; # connector pin E4
+#NET ""         LOC="P44"                ; # connector pin E5
+#NET ""         LOC="P50"                ; # connector pin E6
+#NET ""         LOC="P42"                ; # connector pin E7
+#NET ""         LOC="P99"                ; # connector pin E8
